# oneview

./: .gitignore  DEMO_SETUP.md  Makefile  README.md  demo-requests.http  docker-compose.yml  env.example
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  uvicorn.dev.sh
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  53960d22af24_add_portfolio_snapshots_for_historical_.py  d4899a87b9a5_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py  routes_accounts.py  routes_auth.py  routes_holdings.py  routes_transactions.py
backend/app/api/v1/endpoints/: chatbot.py  news.py  plaid.py  portfolios.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/jobs/: nightly_snapshot.py  weekly_sentiment.py
backend/app/models/: __init__.py  account.py  holding.py  news.py  portfolio.py  portfolio_snapshot.py  transaction.py  user.py
backend/app/schemas/: __init__.py  account.py  holding.py  news.py  portfolio.py  transaction.py  user.py
backend/app/services/: chatbot_service.py  news_service.py  openai_service.py  plaid_service.py  portfolio.py  price_service.py  snapshots.py  yahoo_finance_service.py
backend/app/services/aggregators/: base.py  mock_bank.py  mock_broker.py
backend/tests/: conftest.py  test_accounts.py  test_auth.py  test_holdings.py  test_transactions.py
docs/: API.md  ARCHITECTURE.md  DATA_MODELING.md  PRIVACY_SECURITY.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AmbientBackground.css  AmbientBackground.tsx  Chatbot.css  Chatbot.tsx  Layout.css  Layout.tsx  PlanetMap.css  PlanetMap.tsx
frontend/src/pages/: Dashboard.css  Dashboard.tsx  Home.css  Home.tsx  Login.css  Login.tsx  PortfolioDetail.css  PortfolioDetail.tsx
frontend/src/services/: api.ts
frontend/src/styles/: charts.css
infra/: pre-commit-config.yaml
infra/github/workflows/: ci.yaml
ios-app/: Package.swift
ios-app/PortfolioAI/App/: PortfolioAIApp.swift
ios-app/PortfolioAI/App/Config/: AppConfig.swift
ios-app/PortfolioAI/App/DI/: Container.swift
ios-app/PortfolioAI/App/Extensions/: Color+Theme.swift
ios-app/PortfolioAI/Features/Accounts/: AccountsLinkView.swift
ios-app/PortfolioAI/Features/Auth/: LoginView.swift
ios-app/PortfolioAI/Features/Holdings/: HoldingsView.swift
ios-app/PortfolioAI/Features/Overview/: DashboardView.swift
ios-app/PortfolioAI/Features/Settings/: SettingsView.swift
ios-app/PortfolioAI/Services/API/: Endpoints.swift  HTTPClient.swift
ios-app/PortfolioAI/Widgets/: PortfolioWidget.swift
ml-models/data/: README.md
ml-models/models/: README.md
ml-models/notebooks/: sentiment_training.ipynb
ml-models/src/: export_coreml.py  requirements.txt  train_price_signal.py  train_sentiment.py
(+3 files in other folders)
